--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="navigation">
-          <a class="logo link" href="/" aria-label="логотип сайта">
+          <a class="logo link" href="./index.html" aria-label="логотип сайта">
             <img
               class="logo-img"
               c
