--- a/index.html
+++ b/index.html
@@ -21,20 +21,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-
     <!-- HEADER -->
     <header class="header">
       <div class="container header-container">
         <nav class="navigation">
           <a class="logo link" href="./index.html" aria-label="логотип сайта">
-            <img
-              class="logo-img"
-              c
-              src="./images/logo.svg"
-              alt="Логотип"
-              width="68"
-              height="54"
-            />
+            <svg class="logo-img" width="68" height="54">
+              <use href="./images/sprite.svg#logo"></use>
+            </svg>
           </a>
           <ul class="nav-list list">
             <li class="nav-list-item">
@@ -259,6 +253,39 @@
               <div class="masters-content-wraper">
                 <h3 class="masters-name" lang="en">John Smith</h3>
                 <p class="masters-position" lang="en">Extreme Barber</p>
+                <ul class="social-list list">
+                  <li class="socisal-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="socisal-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="socisal-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="socisal-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -272,6 +299,39 @@
               <div class="masters-content-wraper">
                 <h3 class="masters-name" lang="en">Michele Doe</h3>
                 <p class="masters-position" lang="en">Extreme Barber lang</p>
+                <ul class="social-list list">
+                  <li class="socisal-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="socisal-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="socisal-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="socisal-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -285,6 +345,39 @@
               <div class="masters-content-wraper">
                 <h3 class="masters-name" lang="en">Alan Black</h3>
                 <p class="masters-position" lang="en">Extreme Barber</p>
+                <ul class="social-list list">
+                  <li class="socisal-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="socisal-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="socisal-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="socisal-list-item">
+                    <a href="" class="social-list-link">
+                      <svg class="social-list-icon" width="20" height="20">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -340,45 +433,43 @@
       </section>
 
       <!-- CONTACTS -->
-        <div class="container flex-container">
-          <section class="contacts-section section contacts-form" id="contacts">
-            <h2 class="secondary-title title-theme-dark">Онлайн-запис</h2>
-            <button class="modal-btn" type="button">надіслати</button>
-          </section>
+      <div class="container flex-container">
+        <section class="contacts-section section contacts-form" id="contacts">
+          <h2 class="secondary-title title-theme-dark">Онлайн-запис</h2>
+          <button class="modal-btn" type="button">надіслати</button>
+        </section>
 
-          <section class="contacts-section section contacts-info">
-            <h2 class="secondary-title title-theme-dark">Контакти</h2>
-            <address>
-              <ul class="contact-info-list list">
-                <li class="contact-info-item">
-                  <a
-                    class="contact-info-link link"
-                    href="https://goo.gl/maps/aTQeY1QxTpmuPMmV7"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    >вул. Василькова, 7А Київ, 08132</a
-                  >
-                </li>
-                <li class="contact-info-item">
-                  <a class="contact-info-link link" href="tel:+380441111111"
-                    >+38 044 111 11 11</a
-                  >
-                </li>
-                <li class="contact-info-item">
-                  <a
-                    class="contact-info-link"
-                    href="mailto:barbershop@email.com"
-                    >barbershop@email.com</a
-                  >
-                </li>
-              </ul>
-            </address>
-            <p class="overtitle overtitle-theme-dark">Часи роботи</p>
-            <p class="description description-theme-dark">
-              Щоденно з 9:00 до 22:00
-            </p>
-          </section>
-        </div>
+        <section class="contacts-section section contacts-info">
+          <h2 class="secondary-title title-theme-dark">Контакти</h2>
+          <address>
+            <ul class="contact-info-list list">
+              <li class="contact-info-item">
+                <a
+                  class="contact-info-link link"
+                  href="https://goo.gl/maps/aTQeY1QxTpmuPMmV7"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >вул. Василькова, 7А Київ, 08132</a
+                >
+              </li>
+              <li class="contact-info-item">
+                <a class="contact-info-link link" href="tel:+380441111111"
+                  >+38 044 111 11 11</a
+                >
+              </li>
+              <li class="contact-info-item">
+                <a class="contact-info-link" href="mailto:barbershop@email.com"
+                  >barbershop@email.com</a
+                >
+              </li>
+            </ul>
+          </address>
+          <p class="overtitle overtitle-theme-dark">Часи роботи</p>
+          <p class="description description-theme-dark">
+            Щоденно з 9:00 до 22:00
+          </p>
+        </section>
+      </div>
     </main>
     <!-- FOOTER -->
     <footer class="footer">
