--- a/index.html
+++ b/index.html
@@ -514,6 +514,66 @@
             <use href="./images/sprite.svg#close-icon"></use>
           </svg>
         </button>
+
+        <!-- <strong>Залиште свої дані, ми вам передзвонимо</strong> -->
+
+        <form class="contact-form">
+          <label class="contact-form-field">
+            Ім'я*
+            <span class="contact-form-input-wrapper">
+              <input
+                name="user_name"
+                class="contact-form-input"
+                type="text"
+                required
+              />
+              <svg class="contact-form-icon" width="18" height="18">
+                <use href="./images/sprite.svg#person"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="contact-form-field">
+            Телефон*
+            <span class="contact-form-input-wrapper">
+              <input
+                name="user_phone"
+                class="contact-form-input"
+                type="tel"
+                required
+              />
+              <svg class="contact-form-icon" width="18" height="18">
+                <use href="./images/sprite.svg#phone"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="contact-form-field">
+            Повідомлення
+            <textarea
+              name="user_massage"
+              class="contact-form-massage"
+              placeholder="Введіть текст"
+            ></textarea>
+          </label>
+
+          <div class="contact-form-checkbox-wrapper">
+            <input
+              name="accept_policy"
+              type="checkbox"
+              class="contact-form-checkbox"
+              id="policy-checkbox"
+              required
+            />
+            <label for="policy-checkbox" class="contact-form-checkbox-label"
+              >Погоджуюся з розсилкою та приймаю&nbsp;
+              <a href="#">Умови договору</a></label
+            >
+          </div>
+          <button type="submit" class="contact-form-submit-btn">
+            Відправити
+          </button>
+        </form>
       </div>
     </div>
 
