--- a/index.html
+++ b/index.html
@@ -27,23 +27,27 @@
     <header class="header">
       <div class="container header-container">
         <nav class="navigation">
-          <a class="logo link" href="./index.html" aria-label="логотип сайта">
-            <svg class="logo-img" width="68" height="54">
+          <a
+            class="logo header__logo link"
+            href="./index.html"
+            aria-label="логотип сайта"
+          >
+            <svg class="logo__img" width="68" height="54">
               <use href="./images/sprite.svg#logo"></use>
             </svg>
           </a>
           <ul class="nav-list list">
-            <li class="nav-list-item">
-              <a class="nav-list-link link" href="#about">Про нас</a>
+            <li class="nav-list__item">
+              <a class="nav-list__link link" href="#about">Про нас</a>
             </li>
-            <li class="nav-list-item">
-              <a class="nav-list-link link" href="#prices">Послуги та ціни</a>
+            <li class="nav-list__item">
+              <a class="nav-list__link link" href="#prices">Послуги та ціни</a>
             </li>
-            <li class="nav-list-item">
-              <a class="nav-list-link link" href="#masters">Майстри</a>
+            <li class="nav-list__item">
+              <a class="nav-list__link link" href="#masters">Майстри</a>
             </li>
-            <li class="nav-list-item">
-              <a class="nav-list-link link" href="#contacts">Контакти</a>
+            <li class="nav-list__item">
+              <a class="nav-list__link link" href="#contacts">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -51,7 +55,7 @@
           >+38 044 111 11 11</a
         >
         <button
-          class="modal-btn modal-btn-theme-dark"
+          class="modal-btn modal-btn_theme_dark"
           type="button"
           data-modal-open
         >
@@ -138,7 +142,7 @@
                 нас приходить!
               </p>
             </div>
-            <button class="modal-btn modal-btn-theme-light" type="button">
+            <button class="modal-btn modal-btn_theme_light" type="button">
               онлайн-запис
             </button>
           </div>
